--- a/_work_/Dockerfile
+++ b/_work_/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:24.04
 
-# Install make
-RUN apt-get update && apt-get install -y make && apt-get clean
-
-CMD ["make", "--version"]
+# Install any dependencies needed to run `make ua`
+RUN apt-get update && apt-get install -y \
+    git \
+    make \
+    python3 \
+    && apt-get clean
