--- a/src/python/requirements.txt
+++ b/src/python/requirements.txt
@@ -8,3 +8,4 @@ urllib3>=1.25,<2.2
 pyreadline3==3.4.1; sys_platform == "win32"
 colorama>=0.4.4,<=0.4.6; sys_platform == "win32"
 crc32c>=2.7.1
+awscrt>=0.23.4
