--- a/_work_/Dockerfile
+++ b/_work_/Dockerfile
@@ -7,20 +7,12 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Update the package list and install development essentials
 RUN apt-get update && apt-get install -y \
-    # build-essential \
-    # g++ \
-    # gcc \
     libbz2-dev \
     libicu-dev \
-    # zlib1g-dev \
-    # cmake \
-    # git \
-    wget \
     curl \
-    libpsl-dev \
     libidn11-dev \
     libssl-dev \
-    libcurl4-openssl-dev \
+    # libcurl4-openssl-dev \
     python3 \
     python3-pip \
     python3-venv \
