PTFM-39209 Add basic sync support

--- a/src/api_wrappers/wrapper_table.json
+++ b/src/api_wrappers/wrapper_table.json
@@ -1459,6 +1459,15 @@
         }
     ],
     [
+        "/system/bulkNewSymlinks",
+        "bulkNewSymlinks(req)",
+        {
+            "objectMethod": false,
+            "retryable": false,
+            "wikiLink": "https://documentation.dnanexus.com/developer/api/system-methods#api-method-system-bulknewsymlinks"
+        }
+    ],
+    [
         "/system/describeDataObjects",
         "systemDescribeDataObjects(req)",
         {
