DEVEX-2624 [Upload Agent] Replace/update upload-agent-tester image (#1505)
Changes to make upload-agent, dx-verify-file buildable on Ubuntu 24.04.

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,10 @@
 
 /src/openssl*.tar.gz
 /src/openssl
-/src/boost*.tar.bz2
 /src/boost
-/src/file*.tar.gz
+/src/boost.download-shasum-checked
+/src/boost*.tar.bz2
+/src/file*.tar.xz
 /src/file
 /src/curl*.tar.gz
 /src/curl
