do not use private team

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # INFO: last matching pattern takes the precedence
 
 # devex team owns the entire repository
-* @dnanexus/devex
+* @kpjensen @wormsik @ocbrewing
