adding azure:uksouth-ofh default instance and resource projects

--- a/src/python/dxpy/nextflow/app_asset_projects_ids_prod.json
+++ b/src/python/dxpy/nextflow/app_asset_projects_ids_prod.json
@@ -6,5 +6,6 @@
     "aws:us-east-1": "project-B6JG897KGbkGb6Z7pQ9Q02jG",
     "azure:westeurope": "project-FGZZFkjBPJqBXq1X84pq4VJf",
     "azure:westus": "project-F3vk1q09FX8Jxxp20pq6z8P9",
+    "azure:uksouth-ofh": "project-GK404k924z9199Bv062PkYZk",
     "oci:us-ashburn-1": "project-J1q0ZJV6VQg98Q4Bz36JbQKJ"
 }
