--- a/src/python/dxpy/nextflow/app_asset_projects_ids_staging.json
+++ b/src/python/dxpy/nextflow/app_asset_projects_ids_staging.json
@@ -6,5 +6,6 @@
     "aws:us-east-1": "project-G0zG4B808VFFYVz84FQkvF1K",
     "azure:westeurope": "project-G0zG4BQBq1XQby2F4FqQpPXv",
     "azure:westus": "project-G0zG4B09ZJ5gx1Vz4Fb8Q9XX",
+    "azure:uksouth-ofh": "project-GJkPq8V2X73240P46Y5FKZ41",
     "oci:us-ashburn-1": "project-J1q0ZJV6z2pJXY2Qqv8xvX5G"
 }
