--- a/src/python/requirements_test.txt
+++ b/src/python/requirements_test.txt
@@ -4,7 +4,7 @@ pytest==7.4.2
 pytest-xdist==3.3.1
 pytest-timeout==2.1.0
 parameterized==0.8.1
-pandas==1.3.5; python_version>='3.7'
-pandas>=0.23.3,<=0.25.3; python_version>='3.5.3' and python_version<'3.7'
+pandas==2.2.3; python_version>='3.9'
+pandas==2.0.3; python_version>='3.8' and python_version<'3.9'
 numpy<2.0.0
 requests
